# sensordata_processing

./: .gitignore  CMakeLists.txt
u1/: CMakeLists.txt  calibrate.cpp  calibrate2.cpp  extrinsics.cpp
u2/: CMakeLists.txt  culture_invariant_ply_writer.cpp  culture_invariant_ply_writer.h  david_scanner.cpp  extrinsicParams.yaml  extrinsics.cpp  hand.ply  helmet.ply  intrinsicParams.yaml  laserplane_const.ply  oszilloskop.ply  test
u3/: CMakeLists.txt  capture_images.cpp  genPointCloud.sh  stereo_calib.cpp  stereo_match.cpp
u3/data/: example_cpp_stereo_calib
u4/: CMakeLists.txt  buildTree.cpp  culture_invariant_ply_reader.cpp  culture_invariant_ply_reader.h  culture_invariant_ply_writer.cpp  culture_invariant_ply_writer.h  estimate_normals.cpp  kdTree.cpp  kdTree.h
u4/src/: kdTree.cpp  kdTree.h
u5/: CMakeLists.txt  DistanceFunction.h  Octree.h  culture_invariant_ply_writer.cpp  culture_invariant_ply_writer.h  distance_function.cpp  distance_function.h  octree.cpp  octree.h  reconstruct.cpp  test_octree.cpp
